namespace loja.Models {

    public class Cliente {
        
        public int ClienteId { get; set; }
        public string Nome { get; set; }

    }
}