namespace loja.Models {
    public class Transportadora
{
    public int TransportadoraId { get; set; }
    public string Nome { get; set; }
}
}