@startuml Otilio

class Marca {
   
   -nome : String 
   -descricao : String 
}

class Cliente {
    -nome: String
}

class Produto {

  -nome : String
  -descricao: String 
  -quantidade : Integer
  -preco : Double
}

class NotaDeVenda{
    -data: Date
    -tipo: Boolean
    +cancelar() : Boolean 
    +devolver() : Boolean 
}

class Item {
    -preco: Double
    -percentual: Integer
    -quantidade: Integer
}

class Transportadora {
    -nome : String
}

class Pagamento {
    -dataLimite : Date 
    -valor: Double 
    -pago: Boolean 
}

class PagamentoComCartao {
    -numeroDoCartao : String 
    -bandeira: String 
}

class PagamentoComCheque {
    -banco : int 
    -nomeDoBanco : String
}

class TipoDePagamento {
    -nomeDoCobrado : String 
    -informacoesAdicionais: String 
}

class Vendedor {
    -nome: String 
}

Marca "1" -- "0..*" Produto
Produto  "1" -- "0..*" Item
Item "1..*" -- "1" NotaDeVenda

NotaDeVenda "0..*" -- "1" Cliente
NotaDeVenda "0..*" -- "1" Vendedor
NotaDeVenda "0..*" -- "1" Transportadora

NotaDeVenda "1" -- "1" Pagamento
TipoDePagamento "1" -- "0..*" NotaDeVenda

TipoDePagamento <|-- PagamentoComCartao
TipoDePagamento <|-- PagamentoComCheque
@enduml
